--- a/pass.html
+++ b/pass.html
@@ -1,41 +1,50 @@
 <!DOCTYPE html>
 <html>
- 
+
 <body>
-<title>
-    Assignment6
-</title>
-<h2>Pass phrase by Yadavally Sai Vikram Reddy</h2>
+    <title>
+        Pass Phrase Checker
+    </title>
+    <h2>Pass phrase by Yadavally Sai Vikram Reddy</h2>
 
-<form>
-    <label for="form1_age">What is your age </label>
-    <input type ="number" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
+    <div class="container">
+        <form>
+            <label for="form1_age">Enter the secret phrase </label>
+            <input type="password" id="form1_age" name="form1_age" min=10 max=50 step=2 value="Let me in"> <br>
 
-    <label for="form1_nick">What is your nickname </label>
-    <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
+            <label for="form1_nick">Enter a phrase </label>
+            <input type="text" id="form1_nick" name="form1_nick" autofocus> <br>
 
-    <input type="button" onclick="resolveForm()" value="Get values from form">
-</form>
+            <input type="button" onclick="processPhrase()" value="Check the phrase">
+        </form>
+    </div>
 
+    <div class="container border">
+        <p id="result">This text will be replaced </p>
+    </div>
 
-<p id="result">This text will be replaced </p>
+    <script>
+        let correct = 0;
+        let wrong = 0;
+        function processPhrase() {
+            console.log("Getting form values")
+            age = document.getElementById("form1_age").value
+            nick = document.getElementById("form1_nick").value
+            // confirmed = confirm("Are these the values? "+age+" and "+nick)
 
-<script> 
-
-function resolveForm (){
-    console.log("Getting form values")
-    age = document.getElementById("form1_age").value
-    nick = document.getElementById("form1_nick").value
-    confirmed = confirm("Are these the values? "+age+" and "+nick)
-    
-    out = document.getElementById("result")
-    if(confirmed){
-        out.innerHTML = "Values were confirmed"
-    } else {
-        out.innerHTML = "Values were not confirmed"
-    }
-}
-</script>
+            out = document.getElementById("result")
+            if (age == nick) {
+                alert("Access allowed")
+                correct = correct + 1
+                out.innerHTML = "correct: " + correct + " " + "wrong: " + wrong
+            } else {
+                alert("Access denied")
+                wrong = wrong + 1
+                out.innerHTML = "correct: " + correct + " " + "wrong: " + wrong
+            }
+        }
+    </script>
 
 </body>
-</html> 
+
+</html>
