--- a/arithmetic.html
+++ b/arithmetic.html
@@ -22,13 +22,13 @@
 
     <h1>Yadavally Sai Vikram Reddy computes</h1>
 
-    <div class="container border bg-info">
+    <div class="container border">
         <form>
-            <div class="form-group row">
+            <div class="form-group">
                 <label for="value_one" class="col-sm-2 col-form-label">Enter a base </label>
                 <input type="number" class="col-sm-2 form-control" id="value_one" name="value_one" value=10> <br>
             </div>
-            <div class="form-group row">
+            <div class="form-group">
                 <label for="value_two" class="col-sm-2 col-form-label">Enter an exponent </label>
                 <input type="number" class="col-sm-2 form-control" id="value_two" name="value_two" value=2> <br>
             </div>
@@ -38,7 +38,7 @@
     <div class="container border bg-secondary">
         <p id="output">This text will be replaced </p>
     </div>
-    <div class="container border bg-success">
+    <div class="container border">
         <form>
             <input type="radio" id="add" name="operation" onclick="processRadio()">
             <label for="add">+</label><br>
@@ -50,7 +50,7 @@
             <label for="devide">/</label><br>
         </form>
     </div>
-    <div class="container border bg-secondary">
+    <div class="container border">
         <p id="result">Results of Radio buttons will be shown here</p>
     </div>
     <script>
