Hosted at added

--- a/pass.html
+++ b/pass.html
@@ -56,11 +56,11 @@
                         usingImage = usingImage + 1
                         break
                     case 2:
-                        image.src = "./Images/dolphin.jpg"
+                        image.src = "./images/dolphin.jpg"
                         usingImage = usingImage + 1
                         break
                     case 3:
-                        image.src = "Images/yak.jpg"
+                        image.src = "./images/yak.jpg"
                         usingImage = usingImage + 1
                         break
                     default:
