--- a/pass.html
+++ b/pass.html
@@ -29,6 +29,7 @@
     <script>
         let correct = 0;
         let wrong = 0;
+        let count = 0;
         function processPhrase() {
             console.log("Getting form values")
             age = document.getElementById("form1_age").value
